(zim) (dsl)
fixes #6 #3 #7 #5

- ZIM support - see https://library.kiwix.org/
- DSL fixes: attachments and video support, and more
